@@ -9,4 +9,6 @@ desc: |
  * Add support for post-copy migration.
  * Fix file permissions of backup directory.
  * Fix parsing memory and disk capacity.
-bug: [47617, 47741, 36661]
+ * The target hosts for live migration can now be configured even when the
+   virtual machine is running.
+bug: [47617, 47741, 36661, 48199]
